@@ -1,3 +1,15 @@
+SG-2004-05-11-0: Bugfix:    - fixed that user are spooled after every scheduling
+                              run, when the sharetree is used. The usage in the
+                              user are updated every 2 min now.
+                            - reseted the ticket amount for jobs, which are in hold,
+                              or error state. These jobs are not scheduled and should
+                              not keep their old tickets.
+                            - If a immediate array job was not scheduled, qsub returned
+                              that the job was scheduled. 
+                 Issue:     980, 604
+                 Review:    DT
+                 Changed:   scheduler
+
 JG-2004-05-11-1: Testsuite: Fixed test system_tests/config/file_parsing.
 
 AA-2004-05-11-0: Bugfix:    - Startup logging contains 'none'
